Fix: added alignment flex-end & flex-start

--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -18,6 +18,8 @@ end,
 space-around,
 space-between,
 space-evenly,
+flex-start,
+flex-end,
 unset;
 
 $border-styles: dotted,
